# serpent

./: .clang-format  .gitignore  README.md
camera_tools/: CMakeLists.txt  README.md  package.xml
camera_tools/config/: example.yaml  publish_info_example.yaml  split_image_example.yaml
camera_tools/include/camera_tools/: change_frame_id.hpp  (+3 more)
camera_tools/launch/: change_frame_id.launch  publish_info.launch  split_image.launch
camera_tools/src/: change_frame_id.cpp  change_frame_id_main.cpp  image_operations.cpp  publish_info.cpp  publish_info_main.cpp  split_image.cpp  split_image_main.cpp
eigen_ext/: CMakeLists.txt  package.xml
eigen_ext/test/: covariance.cpp  geometry.cpp  matrix.cpp
eigen_gtsam/: CMakeLists.txt  package.xml
eigen_gtsam/src/: geometry.cpp
eigen_ros/: CMakeLists.txt  package.xml
eigen_ros/eigen_ros/: CMakeLists.txt  README.md
eigen_ros/src/: body_frames.cpp  body_frames_tf.cpp  body_frames_tf_node.cpp  eigen_ros.cpp  geometry_msgs.cpp  imu.cpp  nav_msgs.cpp  odometry.cpp  pose.cpp  sensor_msgs.cpp  statistics_msgs.cpp  std_msgs.cpp  twist.cpp
eigen_ros/srv/: lookup_transform.srv
eigen_ros/test/: eigen_ros.cpp  geometry_msgs.cpp  imu.cpp  nav_msgs.cpp  odometry.cpp  pose.cpp  sensor_msgs.cpp  statistics_msgs.cpp
imu_tools/: CMakeLists.txt  README.md  package.xml
imu_tools/config/: analysis.yaml  transform.yaml
imu_tools/launch/: imu_analysis.launch  imu_transform.launch
imu_tools/src/: imu_analysis.cpp  imu_analysis_main.cpp  imu_transform.cpp  imu_transform_main.cpp
navigation_tools/: CMakeLists.txt  README.md  package.xml
navigation_tools/launch/: combine_transforms.launch  integrate_imu.launch  odometry_to_tf.launch
navigation_tools/src/: combine_transforms.cpp  combine_transforms_main.cpp  combine_transforms_node.cpp  integrate_imu.cpp  integrate_imu_graph_temp.cpp  integrate_imu_graph_test.cpp  integrate_imu_node.cpp  odometry_to_tf.cpp  odometry_to_tf_node.cpp
pointcloud_tools/: CMakeLists.txt  README.md  package.xml
pointcloud_tools/launch/: pointcloud_analyser.launch  pointcloud_compute_distances.launch  pointcloud_range_filter.launch
pointcloud_tools/src/: compute_distances_main.cpp  pclpointcloud2_covariance.cpp  pclpointcloud2_utilities.cpp  point_types.cpp  pointcloud_analyser.cpp  pointcloud_analyser_main.cpp  pointcloud_file_converter.cpp  pointcloud_file_converter_main.cpp  pointcloud_file_converter_open3d.cpp  pointcloud_range_filter.cpp  pointcloud_range_filter_main.cpp
pointcloud_tools/srv/: file_to_message.srv  message_to_file.srv
pointcloud_tools/test/: pclpointcloud2_utilities.cpp  pclpointcloud_transform.cpp  pclpointcloud_utilities.cpp
serpent/: CMakeLists.txt  README.md  package.xml  setup.py
serpent/config/: debug_default.yaml  filter_default.yaml  format_default.yaml  mission_default.yaml  robot_default.yaml  tuning_default.yaml
serpent/launch/: analyse_track_distances.launch  compute_track_distances.launch  load_parameters.launch  record.launch  rosbag.launch  serpent.launch  serpent_backend.launch  serpent_frontend.launch  serpent_stereo_pipeline.launch  serpent_visualisation.launch
serpent/msg/: ImuArray.msg  ImuBiases.msg  PoseGraph.msg  StereoFeature.msg  StereoFeatures.msg  StereoLandmark.msg  StereoLandmarks.msg  StereoTrackerStatistics.msg
serpent/perspective/: serpent.perspective  serpent_stereo_pipeline.perspective
serpent/rviz/: serpent.rviz  serpent_vid.rviz  sparse_optical_flow.rviz  stereo.rviz
serpent/scripts/: metrics_node.py
serpent/src/: backend_node.cpp  frontend.cpp  frontend_node.cpp  graph_manager.cpp  li_frontend.cpp  mapping.cpp  match_filters.cpp  node.cpp  optimisation.cpp  point_types.cpp  pointcloud_add_unit_vectors.cpp  pointcloud_covariance_estimator.cpp  pointcloud_filter.cpp  pointcloud_formatter.cpp  pointcloud_normal_estimation.cpp  registration.cpp  registration_covariance.cpp  registration_methods.cpp  ros_conversion.cpp  sensor_point_types.cpp  stereo_cost_functions.cpp  stereo_factor_finder.cpp  stereo_feature_tracker.cpp  stereo_keypoint_matcher.cpp  stereo_pipeline_node.cpp  utilities.cpp  window_functions.cpp
serpent/test/: DEPRECATED_registration_degeneracy.cpp  graph_manager.cpp  registration_covariance.cpp  registration_covariance_estimator.cpp  registration_degeneracy.cpp  serpent.cpp  test_main.cpp
simulator_prcp_missions/: CMakeLists.txt  README.md  package.xml
simulator_prcp_missions/launch/: body_frames.launch  integrate_imu.launch  mission.launch  mission_serpent.launch  serpent.launch  serpent_stereo_pipeline.launch
simulator_prcp_missions/rviz/: stereo_markers.rviz
snowboard/: CMakeLists.txt  README.md  package.xml
snowboard/launch/: body_frames.launch  imu_transform.launch  integrate_imu.launch  liosam.launch  locus.launch  rviz.launch  serpent.launch  serpent_ice_rink_flat_loop.launch  serpent_ice_rink_flat_loop_stereo_pipeline.launch  serpent_ice_rink_objects_loop.launch  serpent_ice_rink_stationary.launch  serpent_left_stereo.launch  serpent_mammoth_lidar.launch  serpent_mammoth_stereo.launch  serpent_mammoth_stereo_pipeline.launch  serpent_mammoth_tunnel.launch  serpent_stereo.launch  serpent_tunnel.launch  snowboard_liosam.launch  snowboard_locus.launch  snowboard_range_filter.launch  snowboard_serpent.launch  split_image.launch  split_images.launch  stereo_depth.launch  tf.launch  undistort_left_stereo.launch  undistort_stereo.launch
snowboard/perspective/: cameras.perspective
snowboard/rviz/: locus.rviz  snowboard.rviz
snowboard/scripts/: repair_ouster_timestamps.py
statistics_msgs/: CMakeLists.txt  package.xml
statistics_msgs/msg/: Covariance.msg  CovarianceFloat32.msg  CovarianceFloat32Stamped.msg  CovarianceStamped.msg  SummaryStatistics.msg  SummaryStatisticsArray.msg  SummaryStatisticsStamped.msg
ue4_missions/: CMakeLists.txt  README.md  package.xml
ue4_missions/config/: left_camera_info.yaml  right_camera_info.yaml
ue4_missions/launch/: body_frames.launch  publish_camera_info.launch  rviz.launch  serpent.launch  serpent_stereo_pipeline.launch
ue4_missions/rviz/: ue4_platform.rviz
(+251 files in other folders)
