<?xml version="1.0"?>
<package format="2">
    <name>camera_tools</name>
    <version>1.0.0</version>
    <description>The camera_tools package</description>
    <maintainer email="william.talbot97@gmail.com">William Talbot</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>cv_bridge</depend>
    <depend>image_transport</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
</package>
