<?xml version="1.0"?>
<package format="2">
    <name>eigen_ros</name>
    <version>1.0.0</version>
    <description>The eigen_ros package</description>
    <maintainer email="william.talbot97@gmail.com">William Talbot</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>tf2_ros</depend>

    <depend>eigen_ext</depend>
</package>
