<?xml version="1.0"?>
<package format="2">
    <name>navigation_tools</name>
    <version>1.0.0</version>
    <description>The navigation_tools package</description>
    <maintainer email="william.talbot97@gmail.com">William Talbot</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>roscpp</depend>
    <depend>tf2_ros</depend>

    <depend>eigen_ros</depend>
</package>
