<?xml version="1.0"?>
    <package format="2">
    <name>pointcloud_tools</name>
    <version>1.0.0</version>
    <description>The pointcloud_tools package</description>
    <maintainer email="william.talbot97@gmail.com">William Talbot</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>open3d_conversions</depend>
    <depend>pcl_conversions</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>

    <depend>eigen_ext</depend>

    <depend>Open3D</depend>
    <depend>PCL</depend>

    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
</package>
