<?xml version="1.0"?>
<package format="2">
    <name>serpent</name>
    <version>1.0.0</version>
    <description>The serpent package</description>
    <maintainer email="william.talbot97@gmail.com">William Talbot</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>fast_gicp</depend>
    <depend>geometry_msgs</depend>
    <depend>message_filters</depend>
    <depend>nav_msgs</depend>
    <depend>pcl_conversions</depend>
    <depend>pcl_ros</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_srvs</depend>
    <depend>tf2_ros</depend>

    <depend>eigen_ext</depend>
    <depend>eigen_gtsam</depend>
    <depend>eigen_ros</depend>
    <depend>pointcloud_tools</depend>

    <depend>Eigen3</depend>

    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

</package>
